--- a/test.html
+++ b/test.html
@@ -1,2 +1,3 @@
 <hi>My first websiite</h1>
-<p>My favorite color is green</p>
+<p>My favorite color is <span style="
+color:green;">green</span></p>
